third_party/WebKit/Source/core/paint/SVGFilterPainter.cpp
@@ -48,7 +48,7 @@ void SVGFilterRecordingContext::endContent(FilterData* filterData)
     m_paintController->commitNewDisplayItems();
     m_paintController->paintArtifact().replay(*context);
 
-    sourceGraphic->setPicture(toSkSp(context->endRecording()));
+    SkiaImageFilterBuilder::buildSourceGraphic(sourceGraphic, toSkSp(context->endRecording()));
 
     // Content is cached by the source graphic so temporaries can be freed.
     m_paintController = nullptr;
