third_party/WebKit/Source/platform/graphics/filters/SourceGraphic.cpp
@@ -22,8 +22,6 @@
 
 #include "platform/graphics/filters/Filter.h"
 #include "platform/text/TextStream.h"
-#include "third_party/skia/include/core/SkPicture.h"
-#include "third_party/skia/include/effects/SkPictureImageFilter.h"
 
 namespace blink {
 
@@ -49,22 +47,9 @@ FloatRect SourceGraphic::determineAbsolutePaintRect(const FloatRect& requestedRe
     return srcRect;
 }
 
-void SourceGraphic::setPicture(sk_sp<SkPicture> picture)
-{
-    m_picture = std::move(picture);
-}
-
 void SourceGraphic::setSourceRect(const IntRect& sourceRect)
 {
     m_sourceRect = sourceRect;
-}
-
-sk_sp<SkImageFilter> SourceGraphic::createImageFilter()
-{
-    if (!m_picture)
-        return nullptr;
-
-    return SkPictureImageFilter::Make(m_picture, m_picture->cullRect());
 }
 
 TextStream& SourceGraphic::externalRepresentation(TextStream& ts, int indent) const
